# features/v1/auth/dto/login_user_request.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginUserRequest struct {
+	LoginID  string
+	Password string
+}
